# estate-man-api

./: .gitignore  .pdm-python  README.md  coverage.ini  mkdocs.yml  pyproject.toml
.envs/: .env.example  .env.local
apps/issues/: apps.py
apps/posts/: apps.py
apps/ratings/: apps.py
apps/users/: admin.py  forms.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_firs_name_alter_user_first_name.py
config/: celery_app.py  settings.py  urls.py
config/nginx/: nginx.conf  server.estate.conf
config/settings/: base.py  local.py  production.py  test.py
docs/howto/: admin.md  configuration.md  create-app.md  deployment.md  provisioning.md  server-management.md
docs/reference/: commands.md
