[project]
name = "api"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [{ name = "Yongky Putra", email = "dayongky@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "django~=4.2",
    "python-dotenv>=1.0.0",
    "djangorestframework>=3.15.1",
    "django-autoslug>=1.9.9",
    "django-countries>=7.6.1",
    "django-phonenumber-field>=7.3.0",
    "phonenumbers>=8.13.38",
    "drf-yasg>=1.21.7",
    "Pillow>=10.3.0",
    "argon2-cffi>=23.1.0",
    "djoser>=2.2.2",
    "django-taggit>=5.0.1",
    "django-filter>=24.2",
    "django-celery-email>=3.0.0",
    "cloudinary>=1.40.0",
    "django-celery-beat>=2.6.0",
    "redis>=5.0.5",
    "celery>=5.4.0",
    "flower>=2.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
lint = ["ruff>=0.1.13", "mypy>=1.8.0", "pre-commit>=3.6.0"]
test = ["pytest>=7.4.4", "pytest-cov>=4.1.0"]
docs = ["mkdocs>=1.5.3", "mkdocs-material>=9.5.4"]
dev = ["psycopg2-binary>=2.9.9", "watchfiles>=0.22.0"]

[tool.pdm.scripts]
migrate = "python manage.py migrate"
start = "python manage.py runserver"
lint = "pre-commit run --all-files"
docs = "mkdocs serve"
test = "pytest -v tests"

[tool.ruff]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle - Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
    "F401", # unused-import
]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[tool.coverage.run]
parallel = true
source = ["app", "tests"]
